Changed similar codes in showing players into a def (modelization)

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -593,13 +593,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d791f75345db48aa93683684b9c5cbb1",
+       "model_id": "679dac9259f64f40ab922bd81f99b886",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,6 +690,23 @@
     "            if k != \"tactics\" and k != \"starting_eleven\" and k != \"substitutes\":\n",
     "                print(k + \" \" + str(v))\n",
     "    # show squads\n",
+    "    # show button def\n",
+    "    def show_player_info_button(player, isHomeTeam):\n",
+    "        cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
+    "        p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
+    "                           layout = {'width':'300px','height':'30px'})\n",
+    "        if isHomeTeam:\n",
+    "            p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                   else home_team_player_pos_color_dict[player['position']]\n",
+    "        else:\n",
+    "            p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                   else away_team_player_pos_color_dict[player['position']]\n",
+    "        p.player_name = player['name']\n",
+    "        p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "        #display(p)\n",
+    "        return p\n",
+    "            \n",
+    "        \n",
     "    show_starting_eleven_out = widgets.Output()\n",
     "    home_team_starting_eleven_output_list = []\n",
     "    away_team_starting_eleven_output_list = []\n",
@@ -702,58 +719,20 @@
     "    home_team_starting_eleven_output_list.append(team_name)\n",
     "    f_list = []\n",
     "    for player in x.getHomeTeamStartingEleven():\n",
-    "        player_info = widgets.Output()\n",
-    "        cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
-    "        with player_info:\n",
-    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                               layout = {'width':'300px','height':'30px'})\n",
-    "            p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                   else home_team_player_pos_color_dict[player['position']]\n",
-    "            p.player_name = player['name']\n",
-    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "            display(p)\n",
-    "        home_team_starting_eleven_output_list.append(player_info)\n",
+    "        home_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=True))\n",
     "    home_team_starting_eleven_output_list.append(sub_title)\n",
     "    for player in x.getHomeTeamSubstitutes():\n",
-    "        player_info = widgets.Output()\n",
-    "        with player_info:\n",
-    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                               layout = {'width':'300px','height':'30px'})\n",
-    "            p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                   else home_team_player_pos_color_dict[player['position']]\n",
-    "            p.player_name = player['name']\n",
-    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "            display(p)\n",
-    "        home_team_starting_eleven_output_list.append(player_info)\n",
-    "\n",
+    "        home_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=True))\n",
+    "    \n",
     "    team_name = widgets.Output(layout={'border': '2px solid black'})\n",
     "    with team_name:\n",
     "        print(x.getAwayTeam().getCountryName())\n",
     "    away_team_starting_eleven_output_list.append(team_name)\n",
     "    for player in x.getHomeTeamStartingEleven():\n",
-    "        player_info = widgets.Output()\n",
-    "        cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
-    "        with player_info:\n",
-    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                               layout = {'width':'300px','height':'30px'})\n",
-    "            p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                  else away_team_player_pos_color_dict[player['position']]\n",
-    "            p.player_name = player['name']\n",
-    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "            display(p)\n",
-    "        away_team_starting_eleven_output_list.append(player_info)\n",
+    "        away_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=False))\n",
     "    away_team_starting_eleven_output_list.append(sub_title)\n",
     "    for player in x.getAwayTeamSubstitutes():\n",
-    "        player_info = widgets.Output()\n",
-    "        with player_info:\n",
-    "            p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
-    "                               layout = {'width':'300px','height':'30px'})\n",
-    "            p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
-    "                                   else away_team_player_pos_color_dict[player['position']]\n",
-    "            p.player_name = player['name']\n",
-    "            p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "            display(p)\n",
-    "        away_team_starting_eleven_output_list.append(player_info)\n",
+    "        away_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=False))\n",
     "\n",
     "    home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
     "    away_11_vbox = widgets.VBox(away_team_starting_eleven_output_list)\n",
