Changed colors for substitutes

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -593,13 +593,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "679dac9259f64f40ab922bd81f99b886",
+       "model_id": "f0000bc63b234836b96ddcb186860df0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -617,8 +617,10 @@
     "\n",
     "out = widgets.Output()\n",
     "match_info_out = widgets.Output(layout={'border': '1px solid black'})\n",
-    "home_team_player_pos_color_dict = {'captain':'gold', 'Goalie':'#006600', 'Defender':'#009900', 'Midfield':'#00cc00', 'Forward':'#00ff00'}\n",
-    "away_team_player_pos_color_dict = {'captain':'gold', 'Goalie':'#0033ff', 'Defender':'#0066ff', 'Midfield':'#0099ff', 'Forward':'#00ccff'}\n",
+    "home_team_player_pos_color_dict = {'captain':'gold', 'Goalie':'#006600', 'Defender':'#009900', 'Midfield':'#00cc00', 'Forward':'#00ff00',\n",
+    "                                   'substitute': '#00ff66'}\n",
+    "away_team_player_pos_color_dict = {'captain':'gold', 'Goalie':'#0033ff', 'Defender':'#0066ff', 'Midfield':'#0099ff', 'Forward':'#00ccff',\n",
+    "                                   'substitute': '#00ffff'}\n",
     "\n",
     "def name2WikiUrl(name):\n",
     "    # change all names in full name to name with cap first letter and rest lower\n",
@@ -691,16 +693,22 @@
     "                print(k + \" \" + str(v))\n",
     "    # show squads\n",
     "    # show button def\n",
-    "    def show_player_info_button(player, isHomeTeam):\n",
+    "    def show_player_info_button(player, isHomeTeam, isSubstitute):\n",
     "        cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
     "        p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
     "                           layout = {'width':'300px','height':'30px'})\n",
+    "\n",
     "        if isHomeTeam:\n",
     "            p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
     "                                   else home_team_player_pos_color_dict[player['position']]\n",
+    "            if isSubstitute:\n",
+    "                p.style.button_color = home_team_player_pos_color_dict['substitute']\n",
     "        else:\n",
     "            p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
     "                                   else away_team_player_pos_color_dict[player['position']]\n",
+    "            if isSubstitute:\n",
+    "                p.style.button_color = away_team_player_pos_color_dict['substitute']\n",
+    "\n",
     "        p.player_name = player['name']\n",
     "        p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
     "        #display(p)\n",
@@ -719,20 +727,20 @@
     "    home_team_starting_eleven_output_list.append(team_name)\n",
     "    f_list = []\n",
     "    for player in x.getHomeTeamStartingEleven():\n",
-    "        home_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=True))\n",
+    "        home_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=True, isSubstitute=False))\n",
     "    home_team_starting_eleven_output_list.append(sub_title)\n",
     "    for player in x.getHomeTeamSubstitutes():\n",
-    "        home_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=True))\n",
+    "        home_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=True, isSubstitute=True))\n",
     "    \n",
     "    team_name = widgets.Output(layout={'border': '2px solid black'})\n",
     "    with team_name:\n",
     "        print(x.getAwayTeam().getCountryName())\n",
     "    away_team_starting_eleven_output_list.append(team_name)\n",
     "    for player in x.getHomeTeamStartingEleven():\n",
-    "        away_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=False))\n",
+    "        away_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=False, isSubstitute=False))\n",
     "    away_team_starting_eleven_output_list.append(sub_title)\n",
     "    for player in x.getAwayTeamSubstitutes():\n",
-    "        away_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=False))\n",
+    "        away_team_starting_eleven_output_list.append(show_player_info_button(player=player, isHomeTeam=False, isSubstitute=True))\n",
     "\n",
     "    home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
     "    away_11_vbox = widgets.VBox(away_team_starting_eleven_output_list)\n",
